- debugger: output pane and information pane are now hidden by default
- debugger: new method to select the break event(s)
- debugger: message if remote parser's grammar file does not match current file
- tab are reused for the same operation rather than populating
- remote parser launch time-out can be specified in the preferences

- fixed a bug where ANTLRWorks would freeze when replacing literals with token label
- fixed a bug where stats about programming and language implementation experience were inverted

Version 1.0ea8 - 03/11/06

- new: rule dependency graph (can be exported to EPS or bitmap file)
- new: syntax coloring for generated Java code
- new: references, comments and strings are now colorized inside actions
- new: contextual menus in editor, syntax diagram, interpreter and debugger
- new: user can now specify tokens to be ignored in interpreter
- new: syntax colors can be changed in the preferences
- new: display of unreachable alternatives in the syntax diagram

- parse tree (interpreter/debugger) can now be scrolled by clicking and dragging the mouse
- new idea to convert invalid string literals to single quote literals
- new message in status bar if an error is reported in the console
- ctrl-k: now copy the deleted end of line to the system clipboard
- ctrl-t: now swap two characters (insert templates is now invoked using meta-k)
- click in the debug parse tree will show corresponding token in input stream and position in grammar
- kill the remote parser if the debugger cannot stop it (not applicable to remote parser)
- update the rules status and syntax diagram each time the grammar is analyzed (not only when using the Check Grammar command)
- improved ANTLR usage by running ANTLR only when necessary
- rules are now sorted in interpreter and debugger if they are sorted in the editor
- disabling syntax diagram now display a message
- now reload the tokenVocab file content when ANTLRWorks is back to front
- improved selection of a identifier